Restore title color to legacy tab view

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -26,6 +26,7 @@
     <attr name="autoCompleteTextColor" format="color" />
     <attr name="autoCompleteSubtitleTextColor" format="color" />
     <attr name="tabTitleTextColor" format="color" />
+    <attr name="tabTitleTextColorLegacy" format="color" />
     <attr name="tabSubtitleTextColor" format="color" />
     <attr name="tabSelectedBorderColor" format="color" />
     <attr name="tabsFireTextColor" format="color" />
