--- a/app/src/main/res/layout/item_tab_legacy.xml
+++ b/app/src/main/res/layout/item_tab_legacy.xml
@@ -82,7 +82,7 @@
         android:layout_marginStart="12dp"
         android:fontFamily="sans-serif-medium"
         android:lines="1"
-        android:textColor="?attr/tabTitleTextColor"
+        android:textColor="?attr/tabTitleTextColorLegacy"
         android:textIsSelectable="false"
         android:textSize="16sp"
         android:textStyle="normal"
