Make adding a bookmark a one-click operation (can edit from snackbar)

--- a/app/src/main/res/layout/edit_bookmark.xml
+++ b/app/src/main/res/layout/edit_bookmark.xml
@@ -26,7 +26,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp">
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <EditText
             android:id="@+id/titleInput"
