Feature/improve tab ux (#540)
* Set up tab switching for experimentation

* WIP: add grid view alternative for tab switcher

* Add new close asset

* Add animations for sliding a view up and down

* Fix test

* Add slide animation so that webview slides down to reveal tabs

* Fix scroll area to ensure it sits immediately under the toolbar

* WIP tab card decorators outside the card view

* Improve selected tab bordering

* Ensure border is drawn with consistent alpha to match list item

* Reduce the close button margin

* Fix draw over indexing

* Ensure translationY is applied during animation

* Tidying up log statements

* Fix margins

* Add unread tab indicator

* Fix up occasionally missing tab preview, and remove tab placeholder

* Minor code tidy

* Only generate webview preview on the right variant

* Ensure tab preview cleared when user returns to home page

* Allow tab titles to be truncated with an ellipsis

* Allow caching for webview previews

* Placeholder code for removing "at DuckDuckGo" from tab title

* Strip off the "at DuckDuckGo" suffix from the tab title

* Remove bottom margin from recycler view

* Change transition animation duration / distance / fade

* Increase highlighted tab border properties

* Code formatting

* Tidy unneeded code

* Remove unneeded extra generation of the bitmap

* Tidy up code and animations

* Scale generated bitmaps to 50% for better performance

* Code tidy and use new variant keys

* Code tidy

* Code tidy

* Code tidy

* Code tidy

* Ensure tab previews are deleted when tabs are cleared

* Code tidy

* Code tidy

* Restore title color to legacy tab view

* Ensure tab switcher experiment and control are the only active variants

* Update after code review

* Update logic for tab preview saving and deletion

* Add more tests to the preview persister

* Reducing noise of log statements

* Format to line break after the operat

--- a/app/src/main/res/layout/activity_tab_switcher.xml
+++ b/app/src/main/res/layout/activity_tab_switcher.xml
@@ -14,14 +14,15 @@
   ~ limitations under the License.
   -->
 
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/colorPrimaryDark"
     tools:context="com.duckduckgo.app.tabs.ui.TabSwitcherActivity">
 
     <include layout="@layout/include_toolbar" />
 
     <include layout="@layout/content_tab_switcher" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
