--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -26,9 +26,11 @@
     <attr name="autoCompleteTextColor" format="color" />
     <attr name="autoCompleteSubtitleTextColor" format="color" />
     <attr name="tabTitleTextColor" format="color" />
+    <attr name="tabTitleTextColorLegacy" format="color" />
     <attr name="tabSubtitleTextColor" format="color" />
     <attr name="tabSelectedBorderColor" format="color" />
     <attr name="tabsFireTextColor" format="color" />
+    <attr name="tabCardBackgroundColor" format="color" />
     <attr name="bookmarkIconColor" format="color" />
     <attr name="bookmarkTitleTextColor" format="color" />
     <attr name="bookmarkSubtitleTextColor" format="color" />
