--- a/app/src/main/res/anim/slide_from_bottom.xml
+++ b/app/src/main/res/anim/slide_from_bottom.xml
@@ -14,10 +14,7 @@
   ~ limitations under the License.
   -->
 
-<set xmlns:android="http://schemas.android.com/apk/res/android">
-    <translate
-        android:duration="@integer/slide_animation_duration_ms"
-        android:fromXDelta="0"
-        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-        android:toXDelta="100%p" />
-</set>
+<translate xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="@integer/tab_switcher_animation_duration_ms"
+    android:fromYDelta="30%"
+    android:toYDelta="0%" />
