--- a/app/src/main/res/drawable/ic_close_tab.xml
+++ b/app/src/main/res/drawable/ic_close_tab.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<!--
   ~ Copyright (c) 2019 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,10 +14,13 @@
   ~ limitations under the License.
   -->
 
-<set xmlns:android="http://schemas.android.com/apk/res/android">
-    <translate
-        android:duration="@integer/slide_animation_duration_ms"
-        android:fromXDelta="0"
-        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-        android:toXDelta="100%p" />
-</set>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M12,10.727l3.677,-3.677a0.9,0.9 0,1 1,1.273 1.273L13.273,12l3.677,3.677a0.9,0.9 0,1 1,-1.273 1.273L12,13.273 8.323,16.95a0.9,0.9 0,1 1,-1.273 -1.273L10.727,12 7.05,8.323A0.9,0.9 0,1 1,8.323 7.05L12,10.727z"
+      android:fillColor="#AAA"
+      android:fillType="nonZero"/>
+</vector>
