--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -42,10 +42,12 @@
         <item name="omnibarHintColor">@color/grayishTwo</item>
         <item name="autoCompleteTextColor">@color/white</item>
         <item name="autoCompleteSubtitleTextColor">@color/grayish</item>
-        <item name="tabTitleTextColor">@color/midnight</item>
+        <item name="tabTitleTextColor">@color/white</item>
+        <item name="tabTitleTextColorLegacy">@color/midnight</item>
         <item name="tabSubtitleTextColor">@color/coolGray</item>
         <item name="tabSelectedBorderColor">@color/skyBlue</item>
         <item name="tabsFireTextColor">@color/white</item>
+        <item name="tabCardBackgroundColor">@color/almostBlack</item>
         <item name="bookmarkIconColor">@color/white</item>
         <item name="bookmarkTitleTextColor">@color/white</item>
         <item name="bookmarkSubtitleTextColor">@color/grayishTwo</item>
@@ -64,6 +66,7 @@
         <item name="feedbackListItemSeparatorColor">@color/charcoalGrey</item>
         <item name="feedbackEditTextBackgroundColor">@color/almostBlack</item>
         <item name="feedbackEditTextHintColor">@color/grayish</item>
+
     </style>
 
     <style name="AppTheme.Dark" parent="AppTheme.BaseDark" />
@@ -97,9 +100,11 @@
         <item name="autoCompleteTextColor">@color/grayishBrown</item>
         <item name="autoCompleteSubtitleTextColor">@color/warmerGray</item>
         <item name="tabTitleTextColor">@color/almostBlack</item>
+        <item name="tabTitleTextColorLegacy">@color/almostBlack</item>
         <item name="tabSubtitleTextColor">@color/warmerGray</item>
         <item name="tabSelectedBorderColor">@color/cornflowerBlue</item>
         <item name="tabsFireTextColor">@color/warmerGray</item>
+        <item name="tabCardBackgroundColor">@color/white</item>
         <item name="bookmarkIconColor">@color/grayishBrown</item>
         <item name="bookmarkTitleTextColor">@color/almostBlack</item>
         <item name="bookmarkSubtitleTextColor">@color/warmerGray</item>
@@ -118,6 +123,7 @@
         <item name="feedbackListItemSeparatorColor">@color/whiteSix</item>
         <item name="feedbackEditTextBackgroundColor">@color/whiteFive</item>
         <item name="feedbackEditTextHintColor">@color/warmerGray</item>
+
     </style>
 
     <style name="AppTheme.Light" parent="AppTheme.BaseLight">
