Add logic in view model to set DDG as default and handle all different scenarios

--- a/app/src/main/res/layout-land/content_onboarding_default_browser_experiment.xml
+++ b/app/src/main/res/layout-land/content_onboarding_default_browser_experiment.xml
@@ -24,88 +24,74 @@
     tools:background="@color/white"
     tools:context="com.duckduckgo.app.onboarding.ui.OnboardingActivity">
 
-
-    <TextView
-        android:id="@+id/welcomeToDuckDuckGoTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:fontFamily="sans-serif-black"
-        android:lineSpacingExtra="2sp"
-        android:text="@string/defaultBrowserWelcome"
-        android:textAlignment="center"
-        android:textColor="@color/brownishGrayTwo"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <ImageView
         android:id="@+id/defaultBrowserImage"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="40dp"
+        android:layout_height="0dp"
         android:layout_marginTop="42dp"
-        android:layout_marginBottom="26dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="42dp"
         android:importantForAccessibility="no"
         android:src="@drawable/set_as_default_browser_illustration_experiment"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/welcomeToDuckDuckGoTitle"
-        app:layout_constraintVertical_bias="0.5"
-        app:layout_constraintWidth_max="300dp" />
+        app:layout_constraintBottom_toTopOf="@id/continueButton"
+        app:layout_constraintDimensionRatio="1"
+        app:layout_constraintEnd_toStartOf="@id/browserProtectionTitle"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="@id/continueButton"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/browserProtectionTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
+        android:layout_marginStart="20dp"
         android:fontFamily="sans-serif"
         android:lineSpacingExtra="3sp"
         android:text="@string/onboardingDefaultBrowserTitle"
         android:textAlignment="center"
         android:textColor="@color/almostBlack"
-        android:textSize="22sp"
+        android:textSize="17sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/defaultBrowserImage"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toTopOf="@id/browserProtectionSubtitle"
+        app:layout_constraintEnd_toEndOf="@id/continueButton"
+        app:layout_constraintStart_toEndOf="@id/defaultBrowserImage"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
         android:id="@+id/browserProtectionSubtitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="sans-serif"
         android:text="@string/defaultBrowserDescriptionNoDefault"
         android:textAlignment="center"
         android:textColor="@color/brownishGrayTwo"
-        android:textSize="18sp"
+        android:textSize="15sp"
         android:textStyle="normal"
-        app:layout_constraintTop_toBottomOf="@id/browserProtectionTitle"
+        app:layout_constraintBottom_toTopOf="@id/continueButton"
         app:layout_constraintEnd_toEndOf="@id/browserProtectionTitle"
         app:layout_constraintStart_toStartOf="@id/browserProtectionTitle"
-        app:layout_constraintWidth_max="300dp"
-        app:layout_constraintWidth_percent="0.8" />
+        app:layout_constraintTop_toBottomOf="@id/browserProtectionTitle"
+        app:layout_constraintWidth_max="500dp" />
 
     <Button
         android:id="@+id/continueButton"
-        style="@style/OnboardingButtonSecondaryCta"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/defaultBrowserMaybeLater"
+        style="@style/OnboardingButtonSecondaryCta"
         app:layout_constraintBottom_toTopOf="@+id/launchSettingsButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+
     <Button
         android:id="@+id/launchSettingsButton"
-        style="@style/OnboardingButtonPrimaryCta"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/defaultBrowserLetsDoIt"
+        style="@style/OnboardingButtonPrimaryCta"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
