--- a/app/src/main/res/layout/content_onboarding_default_browser_experiment.xml
+++ b/app/src/main/res/layout/content_onboarding_default_browser_experiment.xml
@@ -24,6 +24,26 @@
     tools:background="@color/white"
     tools:context="com.duckduckgo.app.onboarding.ui.OnboardingActivity">
 
+    <Button
+        android:id="@+id/continueButton"
+        style="@style/OnboardingButtonSecondaryCta"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/defaultBrowserMaybeLater"
+        app:layout_constraintBottom_toTopOf="@+id/launchSettingsButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/launchSettingsButton"
+        style="@style/OnboardingButtonPrimaryCta"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/defaultBrowserLetsDoIt"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ImageView
         android:id="@+id/defaultBrowserImage"
         android:layout_width="0dp"
@@ -50,9 +70,9 @@
         android:textColor="@color/almostBlack"
         android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/defaultBrowserImage"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/defaultBrowserImage" />
 
     <TextView
         android:id="@+id/browserProtectionSubtitle"
@@ -60,46 +80,26 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:fontFamily="sans-serif"
+        android:lineSpacingExtra="7sp"
         android:text="@string/defaultBrowserDescriptionNoDefault"
         android:textAlignment="center"
         android:textColor="@color/brownishGrayTwo"
-        android:textSize="18sp"
+        android:textSize="15sp"
         android:textStyle="normal"
-        app:layout_constraintTop_toBottomOf="@id/browserProtectionTitle"
         app:layout_constraintEnd_toEndOf="@id/browserProtectionTitle"
         app:layout_constraintStart_toStartOf="@id/browserProtectionTitle"
+        app:layout_constraintTop_toBottomOf="@id/browserProtectionTitle"
         app:layout_constraintWidth_max="300dp"
         app:layout_constraintWidth_percent="0.8" />
 
-    <Button
-        android:id="@+id/continueButton"
-        style="@style/OnboardingButtonSecondaryCta"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/defaultBrowserMaybeLater"
-        app:layout_constraintBottom_toTopOf="@+id/launchSettingsButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/launchSettingsButton"
-        style="@style/OnboardingButtonPrimaryCta"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/defaultBrowserLetsDoIt"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <include
-        layout="@layout/content_onboarding_default_browser_card"
         android:id="@+id/defaultCard"
-        android:visibility="invisible"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        layout="@layout/content_onboarding_default_browser_card"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        />
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
